--- a/2015.html
+++ b/2015.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Halcyon Days - An Exclusive Freebie for Codrops by Peter Finlan.</title>
+    <title>名大テニスサークルPOLLUX | 2015年度アルバム</title>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -71,36 +71,6 @@
               </div>
             </div>
             <div class="row contact-details">
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipMTL6KLtWeEloHav8iYaH0b99Q_bI_hMFBJvi6gp_u2sLarzqjvhgbFdm6veE5ZfA?key=Skxpb1dGVDdFa1ZFNXpVWlFpTV80MFVqd0xVaXZn"><img src="2015/aki1.jpg"></a></h2>
-                  <p>秋合宿1日目 (2014/10/11)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://goo.gl/photos/Goi8urtvvxK9WUyb8"><img src="2015/aki2.jpg"></a></h2>
-                  <p>秋合宿2日目 (2014/10/12)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipNYVlpm_NOEZ1Kf_rBU10w69NfxY3wIhIV2AexTUK7xbXlfNQiw2k-YwX_OdKJNDQ?key=Q3AtbW5weWN6eU1SZnJjbmxXclhCaWNKc01vTmJn"><img src="2015/aki3.jpg"></a></h2>
-                  <p>秋合宿3日目 (2014/10/13)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipPxcy41sramRWbRsQuwrbWHu0LxUgBZHPW2y6CRUyUgqxvU7P00ngJxPzXiFHpJfA?key=eXRRaXhlM1JTUTJHYV9yR2tWUHc1ZGFfaDhpRVZR"><img src="2015/chir.jpg"></a></h2>
-                  <p>クリコン (2014/12/13)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipPnQvosjw-KIpvRDQ0tordczeNX_oX90v88wfksYFXBuh8cvBT3_QdPMj5RtNsjCA?key=VHNvZ3JlSmcyN3NYLUdBSWwyMEY4R2h5eGJ4Rk1n"><img src="2015/win.jpg"></a></h2>
-                  <p>ウインター (2014/12/6,7,13)</p>
-                </div>
-              </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
                   <h2><a href="https://photos.google.com/share/AF1QipOXQ60pOEQvvslDURydBtWLPn8J6CFP8EcDkQxHMpqDHFNi8ZK_ubneilmWSwO_VQ?key=bzMzNXVfeTY2NFp1eEIyaDl5ZDVLbm1xZm9JUW9B"><img src="2015/haru.jpg"></a></h2>
