--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Halcyon Days - An Exclusive Freebie for Codrops by Peter Finlan.</title>
+    <title>名大テニスサークルPOLLUX | TOP</title>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -61,9 +61,14 @@
                 <h1 class="arrow" id="about">About POLLUX</h1>
                 <p><span>POLLUX</span>とは　名古屋大学テニスサークルです！</p>
                 <p>一番多いのは名大生ですが名工、名市、椙山、金城、淑徳、南山、名城、中京等様々な大学の学生が所属しており、所属大学無関係に馴染めます！</p>
-                <p>活動ペースは週2～3回でテニスをして、練習後に皆でご飯を食べに行ったり、遊びに行きます！ポッルクスでは大学からテニスを始めた人も多く、軟式・硬式の経験も関係なく、テニスをしたい人ならだれでも大歓迎です。初心者の方は先輩が指導してくれるのですぐ打てるようになりますし、上手い先輩もいるので経験者の方はバンバン打てちゃったりします！</p>
+                <p>活動ペースは<span class="red">週2～3回</span>でテニスをして、練習後に皆でご飯を食べに行ったり、遊びに行きます！ポッルクスでは大学からテニスを始めた人も多く、軟式・硬式の経験も関係なく、テニスをしたい人ならだれでも大歓迎です。初心者の方は先輩が指導してくれるのですぐ打てるようになりますし、上手い先輩もいるので経験者の方はバンバン打てちゃったりします！</p>
                 <p>テニスの他にも飲み会、合宿等イベント盛りたくさんあり、あなたの大学生活を楽しいものにすること間違いなしです！対外的にはnuts(名古屋大学庭球同好会連盟)にも加盟しているので試合にも参加でき、ほかのサークルとの交流も広がります。POLLUXの特徴は「世間一般で言われるテニサーのノリ」が全くないことです！</p>
                 <p>ゆるーい雰囲気でお待ちしていますので気になった方、体験・見学のほうお待ちしています！</p>
+                <div class="row">
+                  <div class="col-md-12">
+                    <a href="http://twitter.com/share?text=@tennispollux POLLUXに興味があります&hashtags=pollux" target="_blank" class="ignite-btn">コンタクトはここへ</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -78,7 +83,7 @@
                     <div class="icon">
                       <img src="./img/1.jpg">
                     </div>
-                    <h2>新刊合宿</h2>
+                    <h2>新歓合宿</h2>
                     <p>青空のもとで楽しくテニス。大学最初の思い出をここで残そう:)</p>
                   </div>
                   <div class="col-md-4 wp2 delay-05s">
