--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +12,16 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/queries.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/tennisball.ico">
+
+    <meta property="og:title" content="名大テニスサークルPOLLUX" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://tennis.pollux.nagoya" />
+    <meta property="og:image" content="http://www.fastpic.jp/images.php?file=2437348872.jpg" />
+    <meta property="og:site_name"  content="名大テニスサークルPOLLUX" />
+    <meta property="og:description" content="名大テニスサークルPOLLUXの公式ホームページです。" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tennispollux" />
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
