--- a/2014.html
+++ b/2014.html
@@ -12,6 +12,15 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/queries.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
+
+    <meta property="og:title" content="名大テニスサークルPOLLUX | 2014年度アルバム" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://tennis.pollux.nagoya" />
+    <meta property="og:image" content="http://www.fastpic.jp/images.php?file=2437348872.jpg" />
+    <meta property="og:site_name"  content="名大テニスサークルPOLLUX | 2014年度アルバム" />
+    <meta property="og:description" content="名大テニスサークルPOLLUXの2014年度のアルバムページです。" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tennispollux" />
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
