--- a/index.html
+++ b/index.html
@@ -332,14 +332,8 @@
         <footer>
           <div class="container">
             <div class="row">
-              <div class="col-md-6">
-                <ul class="legals">
-                  <li><a href="#">Terms &amp; Conditions</a></li>
-                  <li><a href="#">Legals</a></li>
-                </ul>
-              </div>
-              <div class="col-md-6 credit">
-                <p>Designed &amp; Developed by <a href="http://www.peterfinlan.com/">Peter Finlan</a> exclusively for <a href="http://tympanus.net/codrops/"><em>Codrops</em></a></p>
+              <div class="col-md-offset-3 col-md-6 credit">
+                <p>Nagoya Uni. Tennis Circle - POLLUX -</p>
               </div>
             </div>
           </div>
