edited cite description

--- a/2015.html
+++ b/2015.html
@@ -16,9 +16,9 @@
     <meta property="og:title" content="名大テニスサークルPOLLUX | 2015年度アルバム" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://tennis.pollux.nagoya" />
-    <meta property="og:image" content="http://www.fastpic.jp/images.php?file=2437348872.jpg" />
-    <meta property="og:site_name"  content="名大テニスサークルPOLLUX | 2015年度アルバム" />
-    <meta property="og:description" content="名大テニスサークルPOLLUXの2015年度のアルバムです。" />
+    <meta property="og:image" content="http://www.fastpic.jp/images.php?file=8663312715.jpg" />
+    <meta property="og:site_name"  content="名大テニスサークルPOLLUX" />
+    <meta property="og:description" content="POLLUXの公式ホームページです！楽しくテニスしましょうっb" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tennispollux" />
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
