--- a/2014.html
+++ b/2014.html
@@ -16,9 +16,9 @@
     <meta property="og:title" content="名大テニスサークルPOLLUX | 2014年度アルバム" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://tennis.pollux.nagoya" />
-    <meta property="og:image" content="http://www.fastpic.jp/images.php?file=2437348872.jpg" />
-    <meta property="og:site_name"  content="名大テニスサークルPOLLUX | 2014年度アルバム" />
-    <meta property="og:description" content="名大テニスサークルPOLLUXの2014年度のアルバムページです。" />
+    <meta property="og:image" content="http://www.fastpic.jp/images.php?file=8663312715.jpg" />
+    <meta property="og:site_name"  content="名大テニスサークルPOLLUX" />
+    <meta property="og:description" content="POLLUXの公式ホームページです！楽しくテニスしましょうっb" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tennispollux" />
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -27,6 +27,16 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-71198236-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
       </head>
       <body id="top">
         <header id="home">
