added metatag for bing

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <meta property="og:description" content="POLLUXの公式ホームページです！楽しくテニスしましょうっb" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tennispollux" />
+
+    <meta name="msvalidate.01" content="131860C33D26FE6113CA225245D38A5E" />
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
