--- a/index.html
+++ b/index.html
@@ -74,9 +74,12 @@
                   <p class="animated fadeInUp delay-05s">名古屋大学を主体とする、インカレテニスサークルのPOLLUX(ポルックス)</p>
                 </div>
               </div>
+              </div>
             </div>
           </section>
         </header>
+
+
         <section class="intro text-center section-padding" id="intro">
           <div class="container">
             <div class="row">
@@ -292,6 +295,16 @@
             </div>
           </div>
         </div>
+        <section class="events text-center">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="arrow">サークルイベント</h1>
+              <div class="col-md-offset-2 col-md-8 text-center ">
+                <a href="./member.html" class="member-btn" id="member-btn">メンバーはこちら</a>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="dark-bg text-center section-padding contact-wrap" id="contact">
           <a href="#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
           <div class="container">
@@ -343,6 +356,17 @@
         </footer>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script type="text/javascript">
+          $(function() {
+            $('#member-btn').click(function() {
+              var pw;
+              pw = prompt("パスワードを入力してください", "");
+              location.href = pw + '.html';
+
+              return false;
+            });
+          });
+        </script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="js/waypoints.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
