--- a/pollux.html
+++ b/pollux.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>名大テニスサークルPOLLUX | TOP</title>
+    <title>名大テニスサークルPOLLUX | メンバーページ</title>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -66,7 +66,7 @@
                 <br><br>
                 
                 <div class="createEvent" id="createEvent" style="display:none;">
-                    <form class="form-horizontal" role="form" id="form">
+                    <form class="form-horizontal" role="form" id="form" method="post">
                         <div class="form-group">
                             <label for="eventName" class="col-sm-2 control-label">
                                 イベント名
@@ -159,6 +159,16 @@
                 </div>
             </div>
         </section>
+
+        <div class="ignite-cta text-center">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <a href="index.html" class="ignite-btn">TOPに戻る</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <footer>
           <div class="container">
