2014年のリンク先を全て変更

--- a/2014.html
+++ b/2014.html
@@ -74,139 +74,139 @@
             <div class="row contact-details">
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipNjwHo75FHD4a7X70M_qpe-HLPPwpm7u-MVSMks"><img src="2014/nuts.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/pRtojoBqgNuVxWzt6"><img src="2014/nuts.jpg"></a></h2>
                   <p>新入生説明会 (2014/04/12, 13)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipNYVlpm_NOEZ1Kf_rBU10w69NfxY3wIhIV2AexTUK7xbXlfNQiw2k-YwX_OdKJNDQ?key=Q3AtbW5weWN6eU1SZnJjbmxXclhCaWNKc01vTmJn"><img src="2014/bbq.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/jsxqQnke2FsDed6TA"><img src="2014/bbq.jpg"></a></h2>
                   <p>新歓BBQ (2014/05/03)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipP3Vvo-svDd6qjz_-QdHGrU3sfrYZLooP6YYWol"><img src="2014/sinkan1.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/MsFjH1mbQz5mM7XA6"><img src="2014/sinkan1.jpg"></a></h2>
                   <p>新歓合宿1日目 (2014/05/17)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipOuLDGiELxZuEiPhRgbSreRAlEDsCI553WAC83Y"><img src="2014/sinkan2.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/UacbjXtVSGsGcHRe6"><img src="2014/sinkan2.jpg"></a></h2>
                   <p>新歓合宿2日目 (2014/05/18)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipM670YDS1U9eYnP0ptiERz13cwkFRhdeLSuPeN5"><img src="2014/mei1.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/kfHb75pWQupTVrUFA"><img src="2014/mei1.jpg"></a></h2>
                   <p>名大祭1日目 (2014/06/07)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipMsW2avJ8cvICkx1r3tBFFSxAgHPF8sSsxtuWSO"><img src="2014/mei2.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/SneoJk3qaxLbhc2F7"><img src="2014/mei2.jpg"></a></h2>
                   <p>名大祭2日目 (2014/06/08)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipMoDTTNZtRH8xjTbmVoN2AH0oOeuTIpa1hqqPJy"><img src="2014/kaicyo.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/SHK1QRBcKeF8NTtW8"><img src="2014/kaicyo.jpg"></a></h2>
                   <p>会長飲み (2014/06/28)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipPahEjy0gVYwyl08RWd5ZupiPHG8bHvAidW2ESd"><img src="2014/natu1.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/7WsWZfewunJhY6tWA"><img src="2014/natu1.jpg"></a></h2>
                   <p>夏合宿1日目 (2014/08/30)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipNVDh_6et8WKcGiWF2j6oOYTUCTfLDLTXGKr0Nv"><img src="2014/natu2.jpg"></a></h2>
-                  <p>夏合宿 (2014/08/31)</p>
+                  <h2><a href="https://goo.gl/photos/QUoLaE97CxucRVd38"><img src="2014/natu2.jpg"></a></h2>
+                  <p>夏合宿2日目 (2014/08/31)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipNluiWa4dagz0D33Fx7dqZo1q9e7H_WohbmZAO_"><img src="2014/natu3.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/8R38oSUgyVHGo5Bf6"><img src="2014/natu3.jpg"></a></h2>
                   <p>夏合宿3日目 (2014/09/01)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipME4XUNtXaKmWW1FY9EcEWWnMF6ugqTgDHElLzB"><img src="2014/natu4.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/yeZE65XLQ2rTq9He8"><img src="2014/natu4.jpg"></a></h2>
                   <p>夏合宿4日目 (2014/09/02)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipM561MKrCSPkTnnWkbyMg3NSvy04gFxy26A8UWM"><img src="2014/aki1.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/nnFJAz3VtLaEQyJZ8"><img src="2014/aki1.jpg"></a></h2>
                   <p>秋合宿1日目 (2014/10/11)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipMfziedpHb0h0B6Is7qqEIFQ1eeoJyLtCotxPoq"><img src="2014/aki2.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/6kVHyw5Nz8v69bmw5"><img src="2014/aki2.jpg"></a></h2>
                   <p>秋合宿2日目 (2014/10/12)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipM-eZRJnyLFTPFThU0LbHphW4gMVAJCfUI63Itq"><img src="2014/aki2-5.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/a2NNq74ttHMCE1cw7"><img src="2014/aki2-5.jpg"></a></h2>
                   <p>秋合宿2.5日目 (2014/10/12)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipOHY1deGe17jusNE5y5Z3nYkpiF9lMONmIFDyq1"><img src="2014/saitou.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/Xc4BMxU3FuaezZHYA"><img src="2014/saitou.jpg"></a></h2>
                   <p>斎藤杯 (2014/11/09)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipMi1wvsVG4LBI3rpmYdWvMI612g3nrWjJO9kkfM"><img src="2014/win1.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/z1Rmkzy7UvSK5UjM6"><img src="2014/win1.jpg"></a></h2>
                   <p>ウィンター1日目 (2014/12/06)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipP5PIoezrtXGlZPr6BkPv_yAvagnKQVwiQREuqa"><img src="2014/win2.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/2c4SMsQBEzYGt5gz8"><img src="2014/win2.jpg"></a></h2>
                   <p>ウィンターmix2日目 (2014/12/07)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipOLaz5Jxs9hr5JcVsdvEX0zGECiPyh8SADFgwoA"><img src="2014/win3.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/r16vZjAD8DsH7D6g6"><img src="2014/win3.jpg"></a></h2>
                   <p>ウィンター男女ダブ (2014/12/13)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipP5S2ASSpkp8-Ree2yG2n_u2VojTdNHSZLlT1uC"><img src="2014/chir.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/VZZmY28RFsAGF7RE8"><img src="2014/chir.jpg"></a></h2>
                   <p>クリコン (2014/12/13)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipNdfCr-W_xQo-YozdgV_qQJ00G1WoDh-g_JFV0o"><img src="2014/huyu.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/TbgHhdoX7rF3tRLJ7"><img src="2014/huyu.jpg"></a></h2>
                   <p>冬合宿 (2014/02/25-27)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipMi-1sqBey46g68PAs-h_2GIE5-fo74NThtVfcm"><img src="2014/oi.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/mJHLCLWGwPDoVrkX7"><img src="2014/oi.jpg"></a></h2>
                   <p>追いコン試合 (2014/03/18)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipP5uwHEMB5bEJIe2rS3CDc6veTMMH8v2CPa2sCQ"><img src="2014/oikon.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/RLikkQFXaTXFTTsC9"><img src="2014/oikon.jpg"></a></h2>
                   <p>追いコン (2014/03/20)</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/album/AF1QipN3GPSDYRkQMi0l-zEo0lO0pEtHtUEMg9ayEjQm"><img src="2014/sotu.jpg"></a></h2>
+                  <h2><a href="https://goo.gl/photos/qCKG6iguiUKgzJy26"><img src="2014/sotu.jpg"></a></h2>
                   <p>卒業式 (2014/03/XX)</p>
                 </div>
               </div>
