--- a/index.html
+++ b/index.html
@@ -130,45 +130,10 @@
                         </div>
                         <div class="col-md-4 wp2 delay-05s">
                            <div class="icon">
-                              <img src="./img/4.jpg">
+                              <img src="./img/12.jpg">
                            </div>
-                           <h2>春一 ミックス</h2>
-                           <p>他のサークルとのミックスと呼ばれる男女ペアで試合！男子諸君、かっこいいところを見せ付けられるかも</p>
-                        </div>
-                        <div class="col-md-4 wp2 delay-05s">
-                           <div class="icon">
-                              <img src="./img/5.jpg">
-                           </div>
-                           <h2>追いコン</h2>
-                           <p>お世話になった先輩を送る会。おしゃれな場所で楽しく美味しいものを(^○^)</p>
-                        </div>
-                        <div class="col-md-4 wp2 delay-05s">
-                           <div class="icon">
-                              <img src="./img/6.jpg">
-                           </div>
-                           <h2>自由気まま</h2>
-                           <p>合宿先できれいな空気を吸いながら寝転がるっていいよね。自由に過ごそう</p>
-                        </div>
-                        <div class="col-md-4 wp2 delay-05s">
-                           <div class="icon">
-                              <img src="./img/7.jpg">
-                           </div>
-                           <h2>クリコン</h2>
-                           <p>毎年12月は男子はスーツ、女子はおしゃれに！リッチに立食パーティを楽しい</p>
-                        </div>
-                        <div class="col-md-4 wp2 delay-05s">
-                           <div class="icon">
-                              <img src="./img/8.jpg">
-                           </div>
-                           <h2>冬合宿</h2>
-                           <p>スノボ合宿。冬の合宿は長野でテニスしないでスノボしよう！こけて上達あるのみ</p>
-                        </div>
-                        <div class="col-md-4 wp2 delay-05s">
-                           <div class="icon">
-                              <img src="./img/9.jpg">
-                           </div>
-                           <h2>秋合宿</h2>
-                           <p>紅葉めいてきた長野で楽しくテニス。サークル内で試合して、豪華な賞品もあるよ！？</p>
+                           <h2>夏合宿</h2>
+                           <p>暑い名古屋から抜け出して涼しい長野の白馬で楽しく3泊4日の合宿(^-^)肝試し・花火・BBQもあるよ！</p>                  
                         </div>
                         <div class="col-md-4 wp2 delay-05s">
                            <div class="icon">
@@ -179,10 +144,52 @@
                         </div>
                         <div class="col-md-4 wp2 delay-05s">
                            <div class="icon">
+                              <img src="./img/9.jpg">
+                           </div>
+                           <h2>秋合宿</h2>
+                           <p>紅葉めいてきた長野で楽しくテニス。サークル内で試合して、豪華な賞品もあるよ！？</p>
+                        </div>
+                        <div class="col-md-4 wp2 delay-05s">
+                           <div class="icon">
+                              <img src="./img/6.jpg">
+                           </div>
+                           <h2>自由気まま</h2>
+                           <p>合宿先できれいな空気を吸いながら寝転がるっていいよね。自由に過ごそう</p>
+                        </div>
+                        <div class="col-md-4 wp2 delay-05s">
+                           <div class="icon">
                               <img src="./img/11.jpg">
                            </div>
                            <h2>ボーリング大会</h2>
                            <p>自主企画のボーリング大会。提案して楽しくボーリングするのもいいよね。賞品もあったし</p>
+                        </div>
+                        <div class="col-md-4 wp2 delay-05s">
+                           <div class="icon">
+                              <img src="./img/7.jpg">
+                           </div>
+                           <h2>クリコン</h2>
+                           <p>毎年12月は男子はスーツ、女子はおしゃれに！リッチに立食パーティを楽しい</p>
+                        </div>
+                        <div class="col-md-4 wp2 delay-05s">
+                           <div class="icon">
+                              <img src="./img/4.jpg">
+                           </div>
+                           <h2>春一 ミックス</h2>
+                           <p>他のサークルとのミックスと呼ばれる男女ペアで試合！男子諸君、かっこいいところを見せ付けられるかも</p>
+                        </div>
+                        <div class="col-md-4 wp2 delay-05s">
+                           <div class="icon">
+                              <img src="./img/8.jpg">
+                           </div>
+                           <h2>冬合宿</h2>
+                           <p>スノボ合宿。冬の合宿は長野でテニスしないでスノボしよう！こけて上達あるのみ</p>
+                        </div>
+                        <div class="col-md-4 wp2 delay-05s">
+                           <div class="icon">
+                              <img src="./img/5.jpg">
+                           </div>
+                           <h2>追いコン</h2>
+                           <p>お世話になった先輩を送る会。おしゃれな場所で楽しく美味しいものを(^○^)</p>
                         </div>
 
                         <div class="clearfix"></div>
