--- a/2015.html
+++ b/2015.html
@@ -12,22 +12,21 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/queries.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-
     <meta property="og:title" content="名大テニスサークルPOLLUX | 2015年度アルバム" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://tennis.pollux.nagoya" />
     <meta property="og:image" content="http://www.fastpic.jp/images.php?file=8663312715.jpg" />
-    <meta property="og:site_name"  content="名大テニスサークルPOLLUX" />
+    <meta property="og:site_name" content="名大テニスサークルPOLLUX" />
     <meta property="og:description" content="POLLUXの公式ホームページです！楽しくテニスしましょうっb" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tennispollux" />
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
-<script>
+    <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -37,116 +36,165 @@
   ga('send', 'pageview');
 
 </script>
-
-    </head>
-      <body id="top">
-        <header id="home">
-          <section class="hero" id="hero">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-12 text-right navicon">
-                  <a id="nav-toggle" class="nav_slide_button" href="#"><span></span></a>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center inner">
-                  <h1 class="animated fadeInDown"><span>POLLUX</span></h1>
-                  <p class="animated fadeInUp delay-05s">名古屋大学を主体とする、インカレテニスサークルのPOLLUX(ポルックス)</p>
-                </div>
-              </div>
-              <!--
-              <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
-                  <a href="http://tympanus.net/codrops/?p=19439" class="learn-more-btn">Back to the article</a>
-                </div>
-              </div>
-            -->
-            </div>
-          </section>
-        </header>
-        <section class="dark-bg text-center section-padding contact-wrap" id="contact">
-          <a href="#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
+  </head>
+  <div class="wrap">
+    <body id="top">
+      <header id="home">
+        <section class="hero" id="hero">
           <div class="container">
             <div class="row">
-              <div class="col-md-12">
-                <h1 class="arrow">2015年度</h1>
-              </div>
-            </div>
-            <div class="row contact-details">
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipOXQ60pOEQvvslDURydBtWLPn8J6CFP8EcDkQxHMpqDHFNi8ZK_ubneilmWSwO_VQ?key=bzMzNXVfeTY2NFp1eEIyaDl5ZDVLbm1xZm9JUW9B"><img src="2015/haru.jpg"></a></h2>
-                  <p>春一</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipP519BZu49ry57g2af_3v_cyreHedgSl3gcy-kYDzcZaBB9B_TAjWTYAUnt-qfi9w?key=UWxiS2dhajBEcHYxeURReW1VNEFBOFBENUZGY0RR"><img src="2015/meidaisai.jpg"></a></h2>
-                  <p>名大祭 (2015/6/6,7)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipOQ7G8gxfrxfwP2kpCM3yE8goqwdlfUIg0NtZ07w0DNUmEFctw3NM-Hjfueo6L5kA?key=dGdfa2R4U01LYUsxSkVMaDhJdV8zSkM2UjZvNnln"><img src="2015/sinkan.jpg"></a></h2>
-                  <p>新歓説明会 (2015/4/11,12)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipNGwmt9FzoFgwv-_a4viZP9yvlp0IzzNj9JGp67gJpuy6xMoIdLacRWf8FGKR5PnA?key=aHV2NW1yMnJacFQ5RkxwTlJFU0tFcUxrdVZOYXBB"><img src="2015/sinkan1-1.jpg"></a></h2>
-                  <p>新歓合宿1日目(1) (2015/5/23)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipOM1MIIe1vq8YOtef4Nai4XLvCMZB18aIrsXBMOl6v-tL8p9_-G88PdxhZE4XS2Ig?key=VE5YaTFFR2FCM0FOR01uZlhFcTRkVTlDclJFSFRn"><img src="2015/sinkan1-2.jpg"></a></h2>
-                  <p>新歓合宿1日目(2) (2014/5/23)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipMa7kOE4UZnT9lpBAsWAbWKSoybMDW9eUkmtu52jfJB_zBGQ3FuSvOh2HCXI4gikQ?key=aGJRNHRxQ092RGhXU3lEX0NjNklaRjFUWmJ3Q2FB"><img src="2015/sinkan1-3.jpg"></a></h2>
-                  <p>新歓合宿1日目(3) (2014/5/23)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipNSBmVR0pRiQaQpGG2UTLV_PQy8L4GOtY-t7XDVpoYLlMjrLwS1P9dk3Eyp8J4ykw?key=d1ktT2Z6QlphWHhOTlkwMmFVMzJSR29GVlQ2Tzdn"><img src="2015/sinkan2.jpg"></a></h2>
-                  <p>新歓合宿2日目 (2014/5/24)</p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="light-box box-hover">
-                  <h2><a href="https://photos.google.com/share/AF1QipN-aTDABo_17JcuVyXh8CzhH4nWraUnRJa0i9SWaZqR4qGN4dlTINxVefvjkcaWxQ?key=NFZzWHFHVGM4YXhxTDc3bndJR2t5SVhSNlJWV2R3"><img src="2015/bbq.jpg"></a></h2>
-                  <p>新歓BBQ (2015/5/2)</p>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <ul class="social-buttons">
-                  <li><a href="https://twitter.com/tennispollux" class="social-btn"><i class="fa fa-twitter"></i></a></li>
-                </ul>
+              <div class="col-md-8 col-md-offset-2 text-center inner">
+                <h1 class="animated fadeInDown">
+                  <span>POLLUX</span>
+                </h1>
+                <p class="animated fadeInUp delay-05s">名古屋大学を主体とする、インカレテニスサークルのPOLLUX(ポルックス)</p>
               </div>
             </div>
           </div>
         </section>
-        <footer>
-          <div class="container">
-            <div class="row">
-              <div class="col-md-offset-3 col-md-6 credit">
-                <p>Nagoya Uni. Tennis Circle - POLLUX -</p>
+      </header>
+      <section class="dark-bg text-center section-padding contact-wrap" id="contact">
+        <a href="#top" class="up-btn">
+          <i class="fa fa-chevron-up"></i>
+        </a>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="arrow">2015年度</h1>
+            </div>
+          </div>
+          <div class="row contact-details">
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://photos.google.com/share/AF1QipOXQ60pOEQvvslDURydBtWLPn8J6CFP8EcDkQxHMpqDHFNi8ZK_ubneilmWSwO_VQ?key=bzMzNXVfeTY2NFp1eEIyaDl5ZDVLbm1xZm9JUW9B">
+                    <img src="2015/haru.jpg">
+                  </a>
+                </h2>
+                <p>春一</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://photos.google.com/share/AF1QipP519BZu49ry57g2af_3v_cyreHedgSl3gcy-kYDzcZaBB9B_TAjWTYAUnt-qfi9w?key=UWxiS2dhajBEcHYxeURReW1VNEFBOFBENUZGY0RR">
+                    <img src="2015/meidaisai.jpg">
+                  </a>
+                </h2>
+                <p>名大祭 (2015/6/6,7)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://photos.google.com/share/AF1QipOQ7G8gxfrxfwP2kpCM3yE8goqwdlfUIg0NtZ07w0DNUmEFctw3NM-Hjfueo6L5kA?key=dGdfa2R4U01LYUsxSkVMaDhJdV8zSkM2UjZvNnln">
+                    <img src="2015/sinkan.jpg">
+                  </a>
+                </h2>
+                <p>新歓説明会 (2015/4/11,12)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://photos.google.com/share/AF1QipNGwmt9FzoFgwv-_a4viZP9yvlp0IzzNj9JGp67gJpuy6xMoIdLacRWf8FGKR5PnA?key=aHV2NW1yMnJacFQ5RkxwTlJFU0tFcUxrdVZOYXBB">
+                    <img src="2015/sinkan1-1.jpg">
+                  </a>
+                </h2>
+                <p>新歓合宿1日目(1) (2015/5/23)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://photos.google.com/share/AF1QipOM1MIIe1vq8YOtef4Nai4XLvCMZB18aIrsXBMOl6v-tL8p9_-G88PdxhZE4XS2Ig?key=VE5YaTFFR2FCM0FOR01uZlhFcTRkVTlDclJFSFRn">
+                    <img src="2015/sinkan1-2.jpg">
+                  </a>
+                </h2>
+                <p>新歓合宿1日目(2) (2014/5/23)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://photos.google.com/share/AF1QipMa7kOE4UZnT9lpBAsWAbWKSoybMDW9eUkmtu52jfJB_zBGQ3FuSvOh2HCXI4gikQ?key=aGJRNHRxQ092RGhXU3lEX0NjNklaRjFUWmJ3Q2FB">
+                    <img src="2015/sinkan1-3.jpg">
+                  </a>
+                </h2>
+                <p>新歓合宿1日目(3) (2014/5/23)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://photos.google.com/share/AF1QipNSBmVR0pRiQaQpGG2UTLV_PQy8L4GOtY-t7XDVpoYLlMjrLwS1P9dk3Eyp8J4ykw?key=d1ktT2Z6QlphWHhOTlkwMmFVMzJSR29GVlQ2Tzdn">
+                    <img src="2015/sinkan2.jpg">
+                  </a>
+                </h2>
+                <p>新歓合宿2日目 (2014/5/24)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://photos.google.com/share/AF1QipN-aTDABo_17JcuVyXh8CzhH4nWraUnRJa0i9SWaZqR4qGN4dlTINxVefvjkcaWxQ?key=NFZzWHFHVGM4YXhxTDc3bndJR2t5SVhSNlJWV2R3">
+                    <img src="2015/bbq.jpg">
+                  </a>
+                </h2>
+                <p>新歓BBQ (2015/5/2)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://goo.gl/photos/Bnh2TXcys11sxjKKA">
+                    <img src="2015/natu.jpg">
+                  </a>
+                </h2>
+                <p>夏合宿 (2015/08/31)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://goo.gl/photos/75nEKo1jnWQRWhfW7">
+                    <img src="2015/chir.jpg">
+                  </a>
+                </h2>
+                <p>クリコン (2015/12/12)</p>
               </div>
             </div>
           </div>
-        </footer>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/waypoints.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/scripts.js"></script>
-        <script src="js/jquery.flexslider.js"></script>
-        <script src="js/modernizr.js"></script>
-      </body>
-    </html>
+          <div class="row">
+            <div class="col-md-12">
+              <ul class="social-buttons">
+                <li>
+                  <a href="https://twitter.com/tennispollux" class="social-btn">
+                    <i class="fa fa-twitter"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-offset-3 col-md-6 credit">
+              <p>Nagoya Uni. Tennis Circle - POLLUX -</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="js/waypoints.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/scripts.js"></script>
+      <script src="js/jquery.flexslider.js"></script>
+      <script src="js/modernizr.js"></script>
+    </body>
+  </div>
+</html>
