--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                               <li><a href="#twitter">Twitter <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                               <li><a href="#portfolio">過去の思い出 <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                               <li><a href="#contact">リンク <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                              <li id="pol"><a href="#">メンバーページ <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                            </ul>
                         </nav>
                      </div>
@@ -378,7 +379,7 @@
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
          <script type="text/javascript">
          $(function() {
-            $('#member-btn').click(function() {
+            $('#member-btn, #pol').click(function() {
                var pw;
                pw = prompt("パスワードを入力してください", "");
                location.href = pw + '.html';
